--- a/immunax/src/App.css
+++ b/immunax/src/App.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+body{
+  font-family: 'Jost', sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -36,3 +42,5 @@
     transform: rotate(360deg);
   }
 }
+
+
