--- a/immunax/src/Components/CompHome/Home.module.css
+++ b/immunax/src/Components/CompHome/Home.module.css
@@ -1,3 +1,8 @@
 .textBox{
     padding: 23% 5%;
 }
+.bookform{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    padding: 10px;
+    border-radius: 10px;
+}
