--- a/immunax/src/Components/CompHome/Home.module.css
+++ b/immunax/src/Components/CompHome/Home.module.css
@@ -2,7 +2,10 @@
     padding: 23% 5%;
 }
 .bookform{
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 10px;
     border-radius: 10px;
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 110px;
 }
